--- a/base/.gitconfig
+++ b/base/.gitconfig
@@ -19,3 +19,6 @@
 	gpgsign = true
 [core]
 	sshCommand = ssh.exe
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
