--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -23,7 +23,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y   send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard 2>/dev/null || xsel --clipboard --input 2>/dev/null || clip.exe"
+bind-key -T copy-mode-vi y   send-keys -X copy-pipe-and-cancel "pbcopy 2>/dev/null || xclip -in -selection clipboard 2>/dev/null || xsel --clipboard --input 2>/dev/null || clip.exe"
 
 # ─── Pane splits ───────────────────────────────────────────────────────────────
 bind | split-window -h -c "#{pane_current_path}"
@@ -58,24 +58,20 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Catppuccin Theme Configuration
+# Catppuccin Theme Configuration (v2.x) — @-options must be before run
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor 'mocha'
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_text " #W"
-set -g @catppuccin_window_current_text " #W#{?window_zoomed_flag,(),}"
-
-# Status bar modules configuration
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_directory}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-
-set -g status-position top
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_flags "icon"
 
 # Initialize TPM (keep at bottom)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Non-@ options must be set AFTER the plugin loads
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -g status-right-length 100
+set -g status-position top
